--- a/src/style.css
+++ b/src/style.css
@@ -14,24 +14,51 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: linear-gradient(
+  background: /* linear-gradient(
       to bottom,
-      rgba(69, 44, 221, 0.3),
+      rgba(247, 36, 194, 0.3),
       rgba(255, 255, 255, 0)
-    ),
-    url('./images/codestates-motif.png');
+    ) */
+    linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
 }
 
 main {
   display: flex;
+  width: 530px;
+  height: 600px;
   flex-direction: column;
   align-items: center;
   padding: 24px;
   box-shadow: var(--big-box);
   border: 1px solid var(--gray-10);
-  border-radius: 4px;
+  border-radius: 30px;
 }
-
+header {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+header > div {
+  display: flex;
+  font-size: 65px;
+  font-family: 'Lobster', cursive;
+  font-style: italic;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+}
+nav {
+  margin-bottom: 30px;
+}
+nav > div {
+  display: flex;
+  font-size: 40px;
+  font-style: italic;
+  font-family: 'Nanum Brush Script', cursive;
+  font-weight: 600;
+  align-items: center;
+  justify-content: center;;
+}
 h1 {
   text-align: center;
   font-size: 36px;
@@ -59,7 +86,7 @@ main > div {
 }
 
 .logo {
-  margin: 12px auto 36px;
+/*   margin: 12px auto 36px; */
   width: 144px;
 }
 
@@ -67,7 +94,7 @@ button {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-  width: 12rem;
+  width: 14rem;
   height: 2.25rem;
   color: var(--white);
   background-color: var(--coz-purple-600);
@@ -93,6 +120,7 @@ input:focus {
   display: none;
 }
 
-.signup {
+.signup,
+.login {
   border: none;
 }
